<resources>
    <string name="app_name">MariApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="adicionar_parente">Adicionar</string>
    <string name="mapa">Mapa</string>
    <string name="title_activity_mapa">Map</string>
    <string name="algo_errado">Sentimos muito dona Maria, mas parece que algo deu errado :(</string>
    <string name="title_activity_adicionar">Adicionar Parentes</string>
    <string name="nome">Nome</string>
    <string name="selecinar_geracao">Selecionar geração</string>
    <string name="data_nascimento">Data De Nascimento</string>
    <string name="nao_selecionado">...</string>
    <string name="campo_vazio">Algum campo não foi preenchido</string>
    <string name="adicionado_com_sucesso">Parente adicionado com sucesso :)</string>
    <string name="config">Configurações</string>
    <string name="ende">Endereço do servidor</string>
    <string name="alterar">Alterar</string>
    <string name="salvar_alteracoes">Salvar alterações</string>
    <string name="excluir_parente">Excluir parente</string>
    <string name="parente_deletado">Parente deletado com sucesso</string>
    <string name="atencao">Atenção</string>
    <string name="deseja_apagar">Você realmente deseja apagar este familiar, Dona Maria?</string>
    <string name="salvar">Alterações salvas com sucesso</string>
    <string name="mensagem_config">O endereço do servidor que esta sendo utilidado deve ser colocado no campo abaixo :)</string>
    <string name="endereco_salvo">Novo endereço salvo com sucesso</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="filho">Filho(a)</string>
    <string name="neto">Neto(a)</string>
    <string name="bisneto">Bisneto(a)</string>
    <string name="tio">Tio(a)</string>
    <string name="primo">Primo(a)</string>
    <string name="irmao">Irmão(ã)</string>
    <string name="trineto">Trineto(a)</string>
    <string name="tetraneto">Tetraneto(a)</string>
    <string name="pentaneto">Pentaneto(a)</string>
    <string name="pentanetom">Pentaneto(a)++</string>
</resources>
